--- a/src/main/resources/static/css/grayscale.css
+++ b/src/main/resources/static/css/grayscale.css
@@ -57,7 +57,7 @@ a:focus {
   margin: 0px;
   text-transform: uppercase;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  position: static;
+  position: fixed;
   width: 100%;
   border-radius: 0;
   border: none;
@@ -338,6 +338,7 @@ body {
 }
 .name{
   color: rgb(255,255,0);
+  letter-spacing: 50px;
 }
 .logoSmall{
   display: flex;
